--- a/.github/workflows/knit.yaml
+++ b/.github/workflows/knit.yaml
@@ -1,9 +1,8 @@
-name: Knit files into MD or HTML
-
+name: knit
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
+    branches: ["main", "workflows"]
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
