--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,5 +21,5 @@ jobs:
     steps:
       # print hello world
       - name: setup
-        run:
-          - echo "Hello world"
+        run: |
+          echo "Hello world"
