--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,6 +24,9 @@ jobs:
         run: |
           pwd
           ls -l
+          cd ..
+          ls -l
+          pwd
           sudo apt-get update
           sudo apt-get install emacs tree
           tree
