--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -29,8 +29,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup emacs
         run: |
+          sudo apt-add-repository ppa:ubuntu-elisp/ppa
           sudo apt-get update
-          sudo apt-get install emacs tree
+          sudo apt-get install emacs-snapshot
           emacs --version
       - name: Publish to markdown
         run: |
