--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,12 +19,10 @@ defaults:
   run:
     shell: bash
     working-directory: ./
-
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      # print hello world
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Setup emacs
@@ -36,17 +34,10 @@ jobs:
       - name: Publish to markdown
         run: |
           emacs --batch --load .github/publish.el
-      # - name: Commit
-      #   run: |
-      #     git config --global user.name 'Workflow'
-      #     git config --global user.email ''
-      #     git add published_version.md
-      #     git commit -m 'Update published version'
-      #     git push
       - name: Store Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: web_version
+          name: emacs_config_web_version.md
           path: published_version.md
       - name: Close
         run: exit 0
