--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -41,6 +41,7 @@ jobs:
       #     path: published_version.md
       - name: Create Release
         uses: softprops/action-gh-release@v1
+        tag_name: ${{ github.sha }}
         with:
           files: published_version.md
       - name: Clear old releases
