--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -42,7 +42,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.sha }}
+          tag_name: latest
           files: published_version.md
       - name: Clear old releases
         uses: dev-drprasad/delete-older-releases@v0.2.1
