--- a/.github/workflows/test-load-emacs.yaml
+++ b/.github/workflows/test-load-emacs.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
         with:
-          path: "~/.emacs.d"
+          path: .emacs.d
       - name: Configure Emacs
         run: |
           sudo apt-add-repository ppa:ubuntu-elisp/ppa
