--- a/.github/workflows/test-load-emacs.yaml
+++ b/.github/workflows/test-load-emacs.yaml
@@ -25,7 +25,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install emacs-snapshot
           emacs --version
-
+          ls -la
+          du -hsc *
       - name: Initialize Emacs
         run: |
           emacs --batch -L ${{ env.EMACS_DIR }} --eval "(progn (toggle-debug-on-error)(load \"${{ env.EMACS_DIR }}/early-init.el\" nil t)(load \"${{ env.EMACS_DIR }}/init.el\" nil t)(setq initial-buffer-choice t))"
