--- a/.github/workflows/test-load-emacs.yaml
+++ b/.github/workflows/test-load-emacs.yaml
@@ -27,7 +27,7 @@ jobs:
           emacs --version
           ls -la
           ls -l .emacs.d
-          ls -l *
+          ls -l ~/.emacs.d
       - name: Initialize Emacs
         run: |
           emacs --batch -L ${{ env.EMACS_DIR }} --eval "(progn (toggle-debug-on-error)(load \"${{ env.EMACS_DIR }}/early-init.el\" nil t)(load \"${{ env.EMACS_DIR }}/init.el\" nil t)(setq initial-buffer-choice t))"
