--- a/.github/workflows/test-load-emacs.yaml
+++ b/.github/workflows/test-load-emacs.yaml
@@ -28,6 +28,7 @@ jobs:
           ls -la
           ls -l .emacs.d
           ls -l ~/.emacs.d
+          pwd
       - name: Initialize Emacs
         run: |
           emacs --batch -L ${{ env.EMACS_DIR }} --eval "(progn (toggle-debug-on-error)(load \"${{ env.EMACS_DIR }}/early-init.el\" nil t)(load \"${{ env.EMACS_DIR }}/init.el\" nil t)(setq initial-buffer-choice t))"
