--- a/.github/workflows/test-load-emacs.yaml
+++ b/.github/workflows/test-load-emacs.yaml
@@ -9,7 +9,9 @@ on:
 
 env:
   EMACS_DIR: ${{ github.workspace }}/.emacs.d
-
+defaults:
+  run:
+    working-directory: ~
 jobs:
   test:
     runs-on: ubuntu-latest
