--- a/.github/workflows/test-load-emacs.yaml
+++ b/.github/workflows/test-load-emacs.yaml
@@ -29,6 +29,7 @@ jobs:
       - name: Initialize Emacs
         run: |
           emacs --batch --eval "(print module-file-suffix)"
+          emacs --batch --eval "(print (treesit-available-p))"
           emacs --batch --eval "(progn (toggle-debug-on-error)(load (concat user-emacs-directory \"early-init.el\") nil t)(load (concat user-emacs-directory \"init.el\") nil t)(setq initial-buffer-choice t))"
           echo "Emacs initialized successfully!"
       - name: Verify Initialization
