--- a/.github/workflows/test-load-emacs.yaml
+++ b/.github/workflows/test-load-emacs.yaml
@@ -26,6 +26,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install emacs-snapshot
           emacs --version
+          sudo apt install cmake
       - name: Initialize Emacs
         run: |
           emacs --batch --eval "(print module-file-suffix)"
