--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,7 +2,8 @@ name: publish
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches:
+      - main
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -22,6 +23,7 @@ defaults:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    needs: test-load-emacs
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
