--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -48,3 +48,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Close
         run: exit 0
+      - name: Trigger Workflow in Another Repo
+        run: |
+          curl -X POST \
+               -H "Authorization: token ${{ secrets.WEBSITE_BUILD }}" \
+               -H "Accept: application/vnd.github.v3+json" \
+               https://api.github.com/repos/jsigman/jsigman.github.io/actions/workflows/deploy.yml/dispatches \
+               -d '{"ref":"main"}'
