--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,9 +28,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup emacs
         run: |
-          sudo apt-add-repository ppa:ubuntu-elisp/ppa
           sudo apt-get update
-          sudo apt-get install emacs-snapshot
+          sudo apt-get install -y emacs
           emacs --version
       - name: Publish to markdown
         run: |
